# NSU-labs-C-Programming

./: .gitlab-ci.yml  README.md
lab-akinator/: CMakeLists.txt  README.md
lab-akinator/test/: testlab-akinator
lab-begin/: CMakeLists.txt
lab-begin/src/: main.c
lab-begin/test/: testlab-begin
lab-gauss/: CMakeLists.txt  README.md
lab-gauss/test/: testlab-gauss
lab-queens/: CMakeLists.txt  README.md
lab-queens/test/: testlab-queens
lab-ray/: CMakeLists.txt  README.md
lab-ray/test/: testlab-ray
lab0/: CMakeLists.txt
lab0/src/: main.c
lab0/src/lib/: FromDecimal.c  FromDecimal.h  ToDecimal.c  ToDecimal.h
lab1-0/: CMakeLists.txt
lab1-0/src/: main.c
lab1-2/: CMakeLists.txt  README.md
lab10/: CMakeLists.txt
lab11/: CMakeLists.txt
lab2/: CMakeLists.txt
lab2/src/: main.c
lab2/src/lib/: permutation.c  permutation.h  validity.c  validity.h
lab3-1/: CMakeLists.txt
lab3-3/: CMakeLists.txt  README.md
lab4/: CMakeLists.txt  README.md
lab4/src/: main.c
lab4/src/lib/: calculatePostForm.c  calculatePostForm.h  createPostfixForm.c  createPostfixForm.h  operatorStruct.h  stack.c  stack.h
lab4/test/: testlab4
lab5/: CMakeLists.txt
lab5/src/: main.c
lab5/src/lib/: config.h  decoder.c  decoder.h  encoder.c  encoder.h  huffman.c  huffman.h
lab6-0/: README.md
lab6-1/: CMakeLists.txt  README.md
lab6-2/: CMakeLists.txt  README.md
lab6-3/: CMakeLists.txt  README.md
lab7/: CMakeLists.txt  README.md
lab8-0/: CMakeLists.txt  README.md
lab8-1/: README.md
lab9/: CMakeLists.txt  README.md
lab9-1/: CMakeLists.txt  README.md
labkosorajo/: CMakeLists.txt  README.md
modules/: cpp_check.cmake
(+31 files in other folders)
